force-app/main/default/objects/Task_Delays__c/Task_Delays__c.object-meta.xml
<CustomObject>
    <label>Task Delay</label>
    <nameField>
        <label>Task Delay Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Delays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>