force-app/main/default/objects/Task_Delays__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delay_Origin__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Response Time to TLG</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Turnover</fullName>
            </value>
            <value>
                <fullName>Requirements Change</fullName>
            </value>
            <value>
                <fullName>User Testing Delay</fullName>
            </value>
            <value>
                <fullName>Awaiting Documents</fullName>
            </value>
            <value>
                <fullName>Misaligned Resource Allocation</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Knowledge Gap / R&amp;D</fullName>
            </value>
            <value>
                <fullName>Response Time to Customer</fullName>
            </value>
            <value>
                <fullName>Unit Testing Delay</fullName>
            </value>
            <value>
                <fullName>License Provision Delay</fullName>
            </value>
            <value>
                <fullName>Salesforce Support Response Time</fullName>
            </value>
            <value>
                <fullName>Application Process delay</fullName>
            </value>
            <value>
                <fullName>Fee Barrier</fullName>
            </value>
            <value>
                <fullName>Response Time</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>