force-app/main/default/objects/Task_Delays__c/fields/Delay_Description__c.field-meta.xml
<CustomField>
    <fullName>Delay_Description__c</fullName>
    <label>Delay Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>