force-app/main/default/objects/Task_Delays__c/fields/Delay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration__c</fullName>
    <label>Delay Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>