force-app/main/default/objects/Task_Delays__c/fields/Delay_Origin__c.field-meta.xml
<CustomField>
    <fullName>Delay_Origin__c</fullName>
    <label>Delay Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>TLG</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>