force-app/main/default/objects/Task_Delays__c/fields/Delay_Status__c.field-meta.xml
<CustomField>
    <fullName>Delay_Status__c</fullName>
    <label>Delay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>