force-app/main/default/objects/Task_Delays__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Task Delays</relationshipLabel>
    <relationshipName>Task_Delays</relationshipName>
    <type>Lookup</type>
</CustomField>