force-app/main/default/objects/Task_Delays__c/fields/TLG_Task__c.field-meta.xml
<CustomField>
    <fullName>TLG_Task__c</fullName>
    <label>Task</label>
    <referenceTo>TLG_Task__c</referenceTo>
    <relationshipLabel>Task Delays</relationshipLabel>
    <relationshipName>Task_Delays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>